@@ -1,5 +1,5 @@
 Source: omweather
-Section: user/accessories
+Section: user/desktop
 Priority: optional
 Maintainer: Vlad Vasiliev <vlad@gas.by>
 #Non Maemo
